# 8-practica-contenedores-default_biomed

./: CMakeLists.txt  README.md  main.cpp
src/: Estudiante.cpp  Estudiante.h  Gestor.cpp  Gestor.h  Tarea.cpp  Tarea.h
